--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,9 @@ button:hover {
   background: #476b6b;
   color: #fff;
 }
+.card-grid{
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap:20px
+}
